--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="image" property="og:image" content="images/bg.jpeg">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="images/shehjar.png" />
+		<!--
+		<link rel="stylesheet" href="assets/css/main.css" /> -->
 		<link rel="icon" href="images/cv.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
