--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 	<head>
 		<title>Shehjar Raina's Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="image" property="og:image" content="images/bg.jpeg">
+		
+		
+		<meta name="image" property="og:image" content="images/bg.jpeg"> 
+		<meta property="og:image" content="images/shehjar.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="images/shehjar.png" />
-		<!--
-		<link rel="stylesheet" href="assets/css/main.css" /> -->
-		<link rel="icon" href="images/cv.png">
+		
+		
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--<link rel="icon" href="images/cv.png"> -->
+		<link rel="icon" href="images/shehjar.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
