--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		
 		
 		<meta name="image" property="og:image" content="images/bg.jpeg"> 
-		<meta property="og:image" content="images/shehjar.png">
+		<meta property="og:image" content="images/cv.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
 		
