--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/cv.png"> 
+		<!-- <link rel="icon" href="images/cv.png"> -->
 		<link rel="icon" href="images/shehjar2.png">
 		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
