--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- <link rel="icon" href="images/cv.png"> -->
-		<link rel="icon" href="images/shehjar2.png">
+		 <link rel="icon" href="images/cv.png"> 
+		<!-- <link rel="icon" href="images/shehjar2.png"> -->
 		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
