--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<p align="center">Thanks for stopping by!</p>
 								<!-- <p><strong> Anything I want in bold </strong></p> -->
 								<!-- <p>End with something like : I invite you to explore my projects to see the range of my skills and accomplishments.</p>				</p> -->
-								<h4 align="center">SQL | PYTHON | TABLEAU | MICROSOFT SUITE | LEAN SIX SIGMA</h4>
+								<h4 align="center">SQL | PYTHON | TABLEAU | MICROSOFT SUITE  <br> LEAN SIX SIGMA GREEN BELT</h4>
 							</article>
 
 						<!-- Work -->
@@ -115,9 +115,9 @@
 								<ul style="font-size: 14px;">
 									<li align="justify">Led a team of four people to build scalable, end-to-end automated social media analytics pipeline using Python that analyzes
 										unstructured Twitter data through web scraping with Tweepy API, enabling real-time tracking of customer insights from key
-										discussion topics through sentiment analysis</li>
+										discussion topics through sentiment analysis.</li>
 									<li align="justify">Deployed four Power BI Dashboards capable of identifying trends in real-time, comparing the performance with top competitors and
-										guiding business decisions, leading to cost savings opportunities of around $500K</li>
+										guiding business decisions, leading to cost savings opportunities of around $500K.</li>
 								</ul>
 
 								<p></p>
@@ -128,17 +128,17 @@
 								<span style="text-align: left;">Business Analyst</span></span><span style="float: right;font-size: 12px">Gurgaon, India</span><p></p>
 								
 								<ul style="font-size: 14px;">
-									<li align="justify">Designed and monitored Tableau dashboards by identifying, analyzing, and maintaining key metrics, resulting in a 20% improvement in data accuracy and visualization efficiency</li>
+									<li align="justify">Designed and monitored Tableau dashboards by identifying, analyzing, and maintaining key metrics, resulting in a 20% improvement in data accuracy and visualization efficiency.</li>
 									<li align="justify">Programmed complex SQL queries to extract, manipulate and analyze attrition data for employees serving overseas clients, allowing
 										for proactive recruitment strategies that reduced turnover by 10%. Achieved approximately $20K in cost savings by mitigating
 										recruitment and training expenses, while ensuring seamless continuity of client relationships.</li>
 									<li align="justify">Designed, developed, and tested a weekly alert system that identified high and low-performing agents, leading to informed staffing
-										decisions, and contributing to a 15% increase in overall agent productivity</li>
+										decisions, and contributing to a 15% increase in overall agent productivity.</li>
 									<li align="justify">Collaborated with other managers and analysts to continuously improve operations by determining performance metrics and optimal
-										compensation incentives, reducing the time spent on compensation determination by 50% </li>
+										compensation incentives, reducing the time spent on compensation determination by 50%. </li>
 									<li align="justify">Headed collaboration with clients and stakeholders for requirement gathering, delivering high quality data analytics and reports
-										leading to effective communication of insights </li>
-									<li align="justify">Worked in an Agile development environment and used Jira for project management</li>
+										leading to effective communication of insights. </li>
+									<li align="justify">Worked in an Agile development environment and used Jira for project management.</li>
 								</ul>
 
 								<p></p>
@@ -150,11 +150,11 @@
 								
 								<ul style="font-size: 14px;">
 									<li align="justify">Generated comprehensive billing and payment reporting dashboard consolidating AR/AP data retrieved and aggregated from large
-										SAP datasets to improve cash flow projection accuracy, manage budget for projects and reduce invoicing errors by 20%</li>
+										SAP datasets to improve cash flow projection accuracy, manage budget for projects and reduce invoicing errors by 20%.</li>
 									<li align="justify">Utilized advanced Excel skills to create a centralized contract renewal tracking system with automated alerts and expiration date
-										reminders reducing missed renewal deadlines by 70% through systematic tracking</li>
+										reminders reducing missed renewal deadlines by 70% through systematic tracking.</li>
 									<li align="justify">Developed and implemented a new cross-functional communication process using SharePoint for centralized inquiry tracking,
-										reducing average inquiry response time by 40% through improved task management and transparency</li>
+										reducing average inquiry response time by 40% through improved task management and transparency.</li>
 								</ul>
 								<p></p>
 							</article>
