--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Shehjar Raina's Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="image" property="og:image" content="images/bg.jpg">
+		<meta name="image" property="og:image" content="images/bgpic.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/cv.png">
